test/parse/module/bad-export-func-name.txt
;;; ERROR: 1
(module (export "foo" (func foo)))
(;; STDERR ;;;
out/test/parse/module/bad-export-func-name.txt:2:29: unexpected token "foo"
(module (export "foo" (func foo)))
                            ^^^
out/test/parse/module/bad-export-func-name.txt:2:32: syntax error, unexpected ), expecting NAT or VAR
(module (export "foo" (func foo)))
                               ^
;;; STDERR ;;)
